--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,9 @@ body {
   position: relative;
   line-height: 1;
   display: flex;
+  width: 100%;
   flex-direction: column;
   min-height: 100%;
-  background-color: #000;
 }
 
 html,
@@ -130,7 +130,7 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
+  content: "";
   content: none;
 }
 
