--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100&family=Bebas+Neue&display=swap");
+@import "./../node_modules/bootstrap/dist/css/bootstrap.css";
+
 html {
   height: 100%;
   min-height: 100%;
