--- a/src/index.css
+++ b/src/index.css
@@ -152,4 +152,8 @@ table {
   --bg300: #cacac6;
   --bg200: rgba(248, 248, 248, 0.8);
   --bg100: #dfe0dc;
+  --shd: -5px 5px 0px 0px rgb(247, 93, 93);
+  --buttonForm: -5px 5px 0px 0px rgb(255, 255, 255);
+  --rd: 0px;
+  --textPadding: 3px 10px 3px 40px;
 }
