--- a/src/index.css
+++ b/src/index.css
@@ -154,6 +154,8 @@ table {
   --bg100: #dfe0dc;
   --shd: -5px 5px 0px 0px rgb(247, 93, 93);
   --buttonForm: -5px 5px 0px 0px rgb(255, 255, 255);
+  --navbarBord: -5px 5px 0px 0px rgb(247, 93, 93, .8);
+  --navbarBordHover: 0px 0px 0px 0px rgb(255, 255, 255);
   --rd: 0px;
   --textPadding: 3px 10px 3px 40px;
 }
