--- a/src/index.css
+++ b/src/index.css
@@ -145,6 +145,7 @@ table {
 :root {
   --bg900: #06070a;
   --bg800: #0e0f0d;
+  --bg750: #353534;
   --bg700: #464745;
   --bg600: #6c95b0;
   --bg500: #a8a9a6;
