--- a/src/index.css
+++ b/src/index.css
@@ -147,13 +147,25 @@ table {
   --bg800: #0e0f0d;
   --bg750: #353534;
   --bg700: #464745;
-  --bg600: #6c95b0;
+  --bg650: #3e3e3e;
   --bg500: #a8a9a6;
   --bg400: #bebfbb;
   --bg300: #cacac6;
-  --bg200: rgba(248, 248, 248, 0.8);
+  --bg200: rgba(248, 248, 248, 1);
   --bg100: #dfe0dc;
-  --shd: -5px 5px 0px 0px rgb(247, 93, 93);
+
+  --palletered8: #0b090a;
+  --palletered7: #161a1d;
+  --palletered6: #660708;
+  --palletered5: #a4161a;
+  --palletered4: #e5383b;
+  --palletered3: #b1a7a6;
+  --palletered2: #d3d3d3;
+  --palletered1: #f5f3f4;
+  --palletered0: #ffffff;
+
+
+  --shd: -5px 5px 0px 0px #a4161a;
   --buttonForm: -5px 5px 0px 0px rgb(255, 255, 255);
   --navbarBord: 0px 1px 1px 1px rgba(176, 174, 174, 0.8);
   --rd: 0px;
